sprite i teg svg

--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
           <h2 hidden class="visually-hidden">Our advantages</h2>
           <ul class="list advantages-list">
             <li class="advantages-list-item">
+              <svg class="advantages-list-icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-antenna"></use>
+              </svg>
               <h3 class="advantages-title">Strategy</h3>
               <p class="advantages-text">
                 Our goal is to identify the business problem to walk away with
@@ -80,6 +83,9 @@
               </p>
             </li>
             <li class="advantages-list-item">
+              <svg class="advantages-list-icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
               <h3 class="advantages-title">Punctuality</h3>
               <p class="advantages-text">
                 Bring the key message to the brand's audience for the best price
@@ -87,6 +93,9 @@
               </p>
             </li>
             <li class="advantages-list-item">
+              <svg class="advantages-list-icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
               <h3 class="advantages-title">Diligence</h3>
               <p class="advantages-text">
                 Research and confirm brands that present the strongest digital
@@ -94,6 +103,9 @@
               </p>
             </li>
             <li class="advantages-list-item">
+              <svg class="advantages-list-icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
               <h3 class="advantages-title">Technologies</h3>
               <p class="advantages-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -149,6 +161,34 @@
               <div class="team-set-item-box">
                 <h3 class="team-member">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
+                <ul clas="social-media-list list">
+                  <li clas="socail-media-item">
+                    <a
+                      class="social-media-link link"
+                      href="http://instagram.com"
+                      target="_blank"
+                    >
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li clas="socail-media-item">
+                    <svg class="social-media-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li clas="socail-media-item">
+                    <svg class="social-media-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li clas="socail-media-item">
+                    <svg class="social-media-icon" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list team-set-item">
