added comment html and css

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,7 @@
   </head>
 
   <body>
+    <!-- header -->
     <header class="header">
       <div class="header-container container">
         <nav class="header-nav">
@@ -203,7 +204,7 @@
         </div>
       </section>
     </main>
-
+    <!-- footer -->
     <footer class="footer">
       <div class="container">
         <a class="logo logo-footer link" href="./index.html"
