--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           >
           <ul class="nav-list list">
             <li class="nav-list-item">
-              <a class="nav-link link" href="./index.html">Studio</a>
+              <a class="nav-link current link" href="./index.html">Studio</a>
             </li>
             <li class="nav-list-item">
               <a class="nav-link link" href="./portfolio.html">Portfolio</a>
@@ -74,9 +74,11 @@
           <h2 hidden class="visually-hidden">Our advantages</h2>
           <ul class="list advantages-list">
             <li class="advantages-list-item">
-              <svg class="advantages-list-icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-antenna"></use>
-              </svg>
+              <div class="advantages-list-wrapper">
+                <svg class="advantages-list-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title">Strategy</h3>
               <p class="advantages-text">
                 Our goal is to identify the business problem to walk away with
@@ -84,9 +86,11 @@
               </p>
             </li>
             <li class="advantages-list-item">
-              <svg class="advantages-list-icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-clock"></use>
-              </svg>
+              <div class="advantages-list-wrapper">
+                <svg class="advantages-list-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title">Punctuality</h3>
               <p class="advantages-text">
                 Bring the key message to the brand's audience for the best price
@@ -94,9 +98,11 @@
               </p>
             </li>
             <li class="advantages-list-item">
-              <svg class="advantages-list-icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-diagram"></use>
-              </svg>
+              <div class="advantages-list-wrapper">
+                <svg class="advantages-list-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title">Diligence</h3>
               <p class="advantages-text">
                 Research and confirm brands that present the strongest digital
@@ -104,9 +110,11 @@
               </p>
             </li>
             <li class="advantages-list-item">
-              <svg class="advantages-list-icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-astronaut"></use>
-              </svg>
+              <div class="advantages-list-wrapper">
+                <svg class="advantages-list-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title">Technologies</h3>
               <p class="advantages-text">
                 Design practice focused on digital experiences. We bring forth a
