--- a/index.html
+++ b/index.html
@@ -170,8 +170,67 @@
               <div class="team-set-item-box">
                 <h3 class="team-member">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
+                <ul class="social-link-list list">
+                  <li class="social-link-item">
+                    <div class="social-link-wrapper">
+                      <a
+                        class="social-link link"
+                        href="http://instagram.com"
+                        target="_blank"
+                        rel="noopener no-referrer"
+                      >
+                        <svg class="social-link-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                  <li class="social-link-item">
+                    <div class="social-link-wrapper">
+                      <a
+                        class="social-link link"
+                        href="http://twitter.com"
+                        target="_blank"
+                        rel="noopener no-referrer"
+                      >
+                        <svg class="social-link-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                  <li class="social-link-item">
+                    <div class="social-link-wrapper">
+                      <a
+                        class="social-link link"
+                        href="http://facebook.com"
+                        target="_blank"
+                        rel="noopener no-referrer"
+                      >
+                        <svg class="social-link-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                  <li class="social-link-item">
+                    <div class="social-link-wrapper">
+                      <a
+                        class="social-link link"
+                        href="http://linkedin.com"
+                        target="_blank"
+                        rel="noopener no-referrer"
+                      >
+                        <svg class="social-link-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                </ul>
               </div>
             </li>
+
             <li class="team-list team-set-item">
               <img
                 src="./images/team/img2.jpg"
@@ -182,8 +241,67 @@
               <div class="team-set-item-box">
                 <h3 class="team-member">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
+                <ul class="social-link-list list">
+                  <li class="social-link-item">
+                    <div class="social-link-wrapper">
+                      <a
+                        class="social-link link"
+                        href="http://instagram.com"
+                        target="_blank"
+                        rel="noopener no-referrer"
+                      >
+                        <svg class="social-link-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                  <li class="social-link-item">
+                    <div class="social-link-wrapper">
+                      <a
+                        class="social-link link"
+                        href="http://twitter.com"
+                        target="_blank"
+                        rel="noopener no-referrer"
+                      >
+                        <svg class="social-link-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                  <li class="social-link-item">
+                    <div class="social-link-wrapper">
+                      <a
+                        class="social-link link"
+                        href="http://facebook.com"
+                        target="_blank"
+                        rel="noopener no-referrer"
+                      >
+                        <svg class="social-link-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                  <li class="social-link-item">
+                    <div class="social-link-wrapper">
+                      <a
+                        class="social-link link"
+                        href="http://linkedin.com"
+                        target="_blank"
+                        rel="noopener no-referrer"
+                      >
+                        <svg class="social-link-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                </ul>
               </div>
             </li>
+
             <li class="team-list team-set-item">
               <img
                 src="./images/team/img1.jpg"
@@ -194,8 +312,67 @@
               <div class="team-set-item-box">
                 <h3 class="team-member">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
+                <ul class="social-link-list list">
+                  <li class="social-link-item">
+                    <div class="social-link-wrapper">
+                      <a
+                        class="social-link link"
+                        href="http://instagram.com"
+                        target="_blank"
+                        rel="noopener no-referrer"
+                      >
+                        <svg class="social-link-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                  <li class="social-link-item">
+                    <div class="social-link-wrapper">
+                      <a
+                        class="social-link link"
+                        href="http://twitter.com"
+                        target="_blank"
+                        rel="noopener no-referrer"
+                      >
+                        <svg class="social-link-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                  <li class="social-link-item">
+                    <div class="social-link-wrapper">
+                      <a
+                        class="social-link link"
+                        href="http://facebook.com"
+                        target="_blank"
+                        rel="noopener no-referrer"
+                      >
+                        <svg class="social-link-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                  <li class="social-link-item">
+                    <div class="social-link-wrapper">
+                      <a
+                        class="social-link link"
+                        href="http://linkedin.com"
+                        target="_blank"
+                        rel="noopener no-referrer"
+                      >
+                        <svg class="social-link-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                </ul>
               </div>
             </li>
+
             <li class="team-list team-set-item">
               <img
                 src="./images/team/img.jpg"
@@ -206,6 +383,64 @@
               <div class="team-set-item-box">
                 <h3 class="team-member">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
+                <ul class="social-link-list list">
+                  <li class="social-link-item">
+                    <div class="social-link-wrapper">
+                      <a
+                        class="social-link link"
+                        href="http://instagram.com"
+                        target="_blank"
+                        rel="noopener no-referrer"
+                      >
+                        <svg class="social-link-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                  <li class="social-link-item">
+                    <div class="social-link-wrapper">
+                      <a
+                        class="social-link link"
+                        href="http://twitter.com"
+                        target="_blank"
+                        rel="noopener no-referrer"
+                      >
+                        <svg class="social-link-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                  <li class="social-link-item">
+                    <div class="social-link-wrapper">
+                      <a
+                        class="social-link link"
+                        href="http://facebook.com"
+                        target="_blank"
+                        rel="noopener no-referrer"
+                      >
+                        <svg class="social-link-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                  <li class="social-link-item">
+                    <div class="social-link-wrapper">
+                      <a
+                        class="social-link link"
+                        href="http://linkedin.com"
+                        target="_blank"
+                        rel="noopener no-referrer"
+                      >
+                        <svg class="social-link-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -214,14 +449,78 @@
     </main>
     <!-- footer -->
     <footer class="footer">
-      <div class="container">
-        <a class="logo logo-footer link" href="./index.html"
-          >Web<span class="logo-light">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="footer-logo-box">
+          <a class="logo logo-footer link" href="./index.html"
+            >Web<span class="logo-light">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div class="social-link-box">
+          <h4 class="social-link-title">Social links</h4>
+          <ul class="social-link-list-footer list">
+            <li class="social-link-item">
+              <div class="social-link-wrapper">
+                <a
+                  class="social-link link"
+                  href="http://instagram.com"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                >
+                  <svg class="social-link-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li class="social-link-item">
+              <div class="social-link-wrapper">
+                <a
+                  class="social-link link"
+                  href="http://twitter.com"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                >
+                  <svg class="social-link-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li class="social-link-item">
+              <div class="social-link-wrapper">
+                <a
+                  class="social-link link"
+                  href="http://facebook.com"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                >
+                  <svg class="social-link-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li class="social-link-item">
+              <div class="social-link-wrapper">
+                <a
+                  class="social-link link"
+                  href="http://linkedin.com"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                >
+                  <svg class="social-link-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
