--- a/index.html
+++ b/index.html
@@ -452,7 +452,6 @@
         <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="project-list list">
-
             <li class="project-item">
               <a class="project-foto link" href="">
                 <div class="box">
@@ -462,18 +461,22 @@
                     width="360"
                   />
                   <div class="overlay">
-                                      <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
                   </div>
-                            </div>
-                            <div class="project-card">
-                              <h2 class="project-title link">
-                              Banking App Interface Concept
-                            </h2>
-                            <p class="project-text link">App</p>
-                          </div>
-                        </a>
-              </li>
-          
+                </div>
+                <div class="project-card">
+                  <h2 class="project-title link">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="project-text link">App</p>
+                </div>
+              </a>
+            </li>
+
             <li class="project-item">
               <a class="project-foto link" href="">
                 <div class="box">
@@ -483,7 +486,11 @@
                     width="360"
                   />
                   <div class="overlay">
-                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
                   </div>
                 </div>
                 <div class="project-card">
@@ -494,22 +501,26 @@
             </li>
 
             <li class="project-item">
-                <a class="project-foto link" href=""></a>
-                    <div class="box">
-                      <img
-                        src="./images/projects/row1-3.jpg"
-                        alt="Meditation App"
-                        width="360"
-                      />
-                      <div class="overlay">
-                        <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                      </div>
-                    </div>
-                  <div class="project-card">
+              <a class="project-foto link" href="">
+                <div class="box">
+                  <img
+                    src="./images/projects/row1-3.jpg"
+                    alt="Meditation App"
+                    width="360"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
+                <div class="project-card">
                   <h2 class="project-title link">Meditation App</h2>
                   <p class="project-text link">App</p>
                 </div>
-                </a>
+              </a>
             </li>
 
             <li class="project-item">
@@ -521,7 +532,11 @@
                     width="360"
                   />
                   <div class="overlay">
-                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
                   </div>
                 </div>
                 <div class="project-card">
@@ -540,7 +555,11 @@
                     width="360"
                   />
                   <div class="overlay">
-                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
                   </div>
                 </div>
                 <div class="project-card">
@@ -559,7 +578,11 @@
                     width="360"
                   />
                   <div class="overlay">
-                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
                   </div>
                 </div>
                 <div class="project-card">
