hw4 deleted unnecessary section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </header>
 
     <main>
-      <!-- hero -->
+      <!-- hero secction 1-->
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
@@ -68,7 +68,7 @@
         </div>
       </section>
 
-      <!-- Anvantages -->
+      <!-- Anvantages section 2-->
       <section class="advantages">
         <div class="container">
           <h2 hidden class="visually-hidden">Our advantages</h2>
@@ -125,8 +125,8 @@
         </div>
       </section>
 
-      <!-- Tasks-->
-      <section class="tasks">
+      <!-- Tasks section 3-->
+      <!--  <section class="tasks">
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="tasks-set list">
@@ -153,9 +153,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section>-->
 
-      <!-- Team -->
+      <!-- Team  section 4-->
       <section class="team">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
@@ -447,7 +447,7 @@
         </div>
       </section>
 
-      <!-- Portfolio -->
+      <!-- Portfolio section 5-->
       <section class="projects">
         <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
