--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </header>
 
     <main>
-      <!-- hero secction 1-->
+      <!-- hero section 1-->
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
@@ -155,7 +155,7 @@
         </div>
       </section>-->
 
-      <!-- Team  section 4-->
+      <!-- Team  section 3-->
       <section class="team">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
@@ -447,7 +447,7 @@
         </div>
       </section>
 
-      <!-- Portfolio section 5-->
+      <!-- Portfolio section 4-->
       <section class="projects">
         <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
@@ -595,8 +595,9 @@
         </div>
       </section>
     </main>
-    <!-- footer -->
-    <footer class="footer">
+
+    <!-- footer 
+  <footer class="footer">
       <div class="container footer-container">
         <div class="footer-logo-box">
           <a class="logo logo-footer link" href="./index.html"
@@ -662,6 +663,82 @@
                   rel="noopener no-referrer"
                 >
                   <svg class="social-link-icon" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>-->
+
+    <footer class="footer">
+      <div class="container footer-container">
+        <div class="footer-logo-box">
+          <a class="logo logo-footer link" href="./index.html"
+            >Web<span class="logo-light">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div class="social-link-box">
+          <p class="social-link-title">Social media</p>
+          <ul class="social-link-list-footer list">
+            <li class="social-link-item">
+              <div class="social-link-wrapper">
+                <a
+                  class="social-link link"
+                  href="http://instagram.com"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                >
+                  <svg class="social-link-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li class="social-link-item">
+              <div class="social-link-wrapper">
+                <a
+                  class="social-link link"
+                  href="http://twitter.com"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                >
+                  <svg class="social-link-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li class="social-link-item">
+              <div class="social-link-wrapper">
+                <a
+                  class="social-link link"
+                  href="http://facebook.com"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                >
+                  <svg class="social-link-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li class="social-link-item">
+              <div class="social-link-wrapper">
+                <a
+                  class="social-link link"
+                  href="http://linkedin.com"
+                  target="_blank"
+                  rel="noopener no-referrer"
+                >
+                  <svg class="social-link-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
