--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
             >Web<span class="logo-dark">Studio</span></a
           >
           <ul class="nav-list list">
-            <li class="nav-list-item">
-              <a class="nav-link current link" href="./index.html">Studio</a>
+            <li class="nav-item">
+              <a class="nav-link link current" href="./index.html">Studio</a>
             </li>
-            <li class="nav-list-item">
-              <a class="nav-link link" href="./portfolio.html">Portfolio</a>
+            <li class="nav-item">
+              <a class="nav-link link" href="">Portfolio</a>
             </li>
-            <li class="nav-list-item">
+            <li class="nav-item">
               <a class="nav-link link" href="">Contacts</a>
             </li>
           </ul>
