--- a/index.html
+++ b/index.html
@@ -45,12 +45,14 @@
         <address class="adress">
           <ul class="adress-list list">
             <li>
-              <a class="link" href="mailto:info@devstudio.com"
+              <a class="link adress-link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
             <li>
-              <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+              <a class="link adress-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
             </li>
           </ul>
         </address>
